# neurosparkles-website

./: .gitignore  Dockerfile  MANIFEST.in  compose.yaml  setup.cfg
src/website/: __init__.py  errors.py  helpers.py
src/website/blueprints/: api.py  auth.py  metrics.py  users.py
src/website/models/: blood_pressure.py  bpm.py  exercise.py  food.py  moods.py  relationships.py  sleep.py  spo2.py  users.py
src/website/static/css/: base.css  form.css  header.css  index.css  menu.css  metrics.css  sidebar.css  table.css
src/website/templates/: base.html  header.html  menu.html
src/website/templates/admin_pages/: users.py
src/website/templates/layout/: base.html  header.html  sidebar.html
src/website/templates/pages/: error.html  index.html  login.html  metrics.html  resources.html  story.html
src/website/templates/pages/users/: login.html  patients.html  profile.html  providers.html  reset_password.html  signup.html  signup_success.html
